<resources>
    <string name="app_name">BestOJApp</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login">登陆</string>
    <string name="login_register">登陆/注册</string>
    <string name="register">注册用户</string>
    <string name="testlogin">测试是否登陆成功</string>
    <string name="logout">退出登陆</string>
    <string name="title_activity_tree_node">TreeNodeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="problem">题目</string>
    <string name="experiment">高级语言程序设计</string>
    <string name="data_structure">数据结构</string>
    <string name="download_data">下载数据</string>
    <string name="advanced_program">编程进阶</string>
    <string name="delete_treenode">删除已下载的结点信息</string>
    <string name="time_limit">时间限制:</string>
    <string name="memory_limit">内存限制:</string>
    <string name="submit_times">提交次数:</string>
    <string name="ac_times">通过次数:</string>
    <string name="problem_id">1000</string>
    <string name="problem_title">A+B</string>
    <string name="problem_description">题目描述</string>
    <string name="problem_input">输入格式</string>
    <string name="problem_output">输出格式</string>
    <string name="problem_sample_input">输入样例</string>
    <string name="problem_sample_output">输出样例</string>
    <string name="problem_source">来源</string>
    <string name="problem_tip">提示</string>
    <string name="problem_discuss">讨论</string>
    <string name="post_discuss">发表讨论</string>
    <string name="post">发表</string>
    <string name="cancel">取消</string>
    <string name="problem_solution">提交记录</string>
    <string name="running_time">运行时间:</string>
    <string name="running_memory">运行内存:</string>
    <string name="judgement_result">评判结果:</string>
    <string name="submit_time">提交时间:</string>
    <string name="detail">详细信息</string>
    <string name="code">代码</string>
    <string name="post_times">发帖数量</string>
    <string name="good_post_times">精华帖数量</string>
    <string name="last_time_signin">上次签到时间</string>
    <string name="discuss_title">标题:</string>
    <string name="discuss_content">正文:</string>
    <string name="space">" "</string>
    <string name="title_activity_exam_list">ExamListActivity</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="last_time">持续时间</string>
    <string name="description">描述</string>
    <string name="loading">正在加载</string>
    <string name="fail_loading_exam">加载考试失败，请检查网络连接</string>
    <string name="fail_loading_tree_node">获取节点失败，请检查网络连接</string>
    <string name="fail_loading_problem">加载题目失败，请检查网络连接</string>
    <string name="fail_loading_discuss">加载讨论失败，该题没有人发表过讨论或网络连接异常</string>
    <string name="fail_loading_solution_list">加载提交记录失败，该题没有提交记录或网络连接异常</string>
    <string name="fail_posting">发表讨论失败，请检查网络连接</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="hint_token">OJ的token</string>
    <string name="hint">提示: 使用讨论功能需要你输入正确的用户名和密码, 使用OJ相关功能需要你输入正确的OJ token</string>
    <string name="input_username_and_password_first">请先填写用户名和密码!</string>
    <string name="problem_follow">关注该题</string>
    <string name="problem_dislike">不喜欢该题</string>
    <string name="book_name">书名</string>
    <string name="book_author">作者</string>
    <string name="book_intro">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</string>
    <string name="problem_recommendation">每日题目推荐</string>
    <string name="ac_ratio">和你年级的相同的人中，0%的人完成了这道题</string>
</resources>
