<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_homepage_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_homepage_experiment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experiment"/>

    <Button
        android:id="@+id/button_homepage_data_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_structure"/>

    <Button
        android:id="@+id/button_homepage_download_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_data"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_homepage_advanced_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_program"/>

</LinearLayout>
