<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/textViewProblemID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_id"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <TextView
                android:id="@+id/textViewProblemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_title"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_limit"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewTimeLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_limit"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMemoryLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_times"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewSubmitTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac_times"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewACTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_description"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_input"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_output"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_sample_input"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemSampleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_sample_output"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemSampleOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_tip"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_source"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewProblemSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_discuss"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_solution"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>