<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/textView_detail_problemId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_id"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <TextView
                android:id="@+id/textView_detail_problem_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_title"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_time"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView_running_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_memory"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView_running_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judgement_result"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView_judgement_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_time"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView_submit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_detail_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>